fixed blue message overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ input[type="password"]{
     color:#17A7C6;
     margin-top: 40px;
     position:absolute;
-    bottom: 100px;
+    bottom: 110px;
     left:0;
     right:0;
 }
